manifest/objects/Apttus_Approval__ApprovalRuleDimension__c.object
<CustomObject>
    <description>Represents an approval rule dimension</description>
    <fields>
        <fullName>Apttus_Approval__BusinessObject__c</fullName>
        <description>The business object which provides the context for the dimension</description>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Apttus__Agreement_Term_Exception__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Datasource__c</fullName>
        <description>The data source which provides the value for the dimension.</description>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Description__c</fullName>
        <description>The description for the dimension</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DimensionType__c</fullName>
        <description>The dimension type</description>
        <label>Dimension Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                    <default>true</default>
                    <label>Field</label>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval Rule Dimension</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__BusinessObject__c</columns>
        <columns>Apttus_Approval__DimensionType__c</columns>
        <columns>Apttus_Approval__Datasource__c</columns>
        <columns>Apttus_Approval__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contract_Ops_ApprovalRuleDimension</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Rule Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>